--- a/assets/vigobnb.css
+++ b/assets/vigobnb.css
@@ -13,6 +13,21 @@ body {
     scroll-behavior: smooth;
 }
 
+bx-loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: calc(var(--size) / -2);
+    margin-left: calc(var(--size) / -2);
+    width: var(--size);
+    height: var(--size);
+    --size: 5em;
+}
+
+bx-table-cell.price {
+    text-align: right;
+}
+
 @supports (font-variation-settings: normal) {
     body {
         font-family: 'Inter var', sans-serif;
