--- a/assets/vigobnb.css
+++ b/assets/vigobnb.css
@@ -1,10 +1,15 @@
+:root {
+    --nav-width: 16rem;
+    --nav-width: 0;
+}
+
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
 }
 
 body {
-    margin: 0;
+    margin: 0 0 0 var(--nav-width);
     font-family: 'Inter', sans-serif;
     font-weight: 300;
     cursor: default;
@@ -22,6 +27,10 @@ bx-loading {
     width: var(--size);
     height: var(--size);
     --size: 5em;
+}
+
+bx-side-nav {
+    width: var(--nav-width);
 }
 
 bx-table-cell.price {
